--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -1,3 +1,9 @@
+@mixin custom-box-shadow($x: 0px, $y: 0px, $blur: 21px, $spread: 4px, $color: rgba(45, 255, 196, 0.12)) {
+	-webkit-box-shadow: #{$x} #{$y} #{$blur} #{$spread} #{$color} !important;
+	-moz-box-shadow: #{$x} #{$y} #{$blur} #{$spread} #{$color} !important;
+	box-shadow: #{$x} #{$y} #{$blur} #{$spread} #{$color} !important;
+}
+
 .non-selectable {
 	display: inline-block;
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -11,4 +17,46 @@
 
 .inline-block{
 	display: inline-block;
+}
+
+.bloom-text{
+	color: white;
+	text-shadow: 0px 0px var(--text-fx-bloom-size, 8px) var(--text-fx-bloom-color, var(--hover-color)),
+				0px 0px 1px var(--text-fx-bloom-color, var(--hover-color));
+}
+
+.bloom-box-shadow{
+	// box-shadow: 0px 0px var(--text-fx-bloom-size, 8px) var(--text-fx-bloom-color, var(--hover-color)),
+	box-shadow: 
+		0px 0px 1px 0px white,
+		0px 0px 7px 2px var(--hover-color, white),
+		// 0px 0px 5px 2px var(--hover-color, white),
+	// 0px 0px 1px var(--text-fx-bloom-color, var(--hover-color)),
+	// 0px 0px 10px var(--hover-color, var(--hover-color)),
+	// 0px 0px 5px var(--text-fx-bloom-color, white),
+	// 0px 4px 10px var(--hover-color, white),
+	// 0px 1px 5px 3px white;
+		;
+	// 0px 4px 2px var(--hover-color, white);
+}
+
+
+.legible-text-shadow{
+	$shadow-color: #000;
+	// text-shadow: 0px 2px 4px $shadow-color, 
+	// 		0px 4px 8px $shadow-color,
+	// 		0px -1px 3px $shadow-color,
+	// 		;
+	text-shadow: 0px 1px 4px $shadow-color, 
+			;
+}
+
+.text-align-left{
+	text-align: left;
+}
+
+.hover-border-bloom:hover{
+	// @include custom-box-shadow(2px, 2px, 10px, 0px, var(--hover-color));
+	@include custom-box-shadow(0px, 0px, 8px, 3px, var(--hover-color));
+	// border: ;
 }
