--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -253,7 +253,8 @@ transition: all 300ms;
   object-fit: cover;
 //   transform: scale(calc(1 + (var(--hover, 1) * 0.25))) rotate(calc(var(--hover, 0) * -5deg));
   transform: scale(calc(1 + (var(--hover, 3) * 0.25))) rotate(calc(var(--hover, 0) * -7deg));
-  transition: transform 0.2s;
+//   transition: transform 0.2s;
+  transition: transform 0.7s;
 }
 
 .card__footer {
@@ -1535,43 +1536,95 @@ div.highlight pre, .articles-content pre {
 }
 
 
+// DELETE NOT USED - Mover a... albums.scss
 .card{
-	transition: all 200ms;
+	transition: all 1200ms;
 
-	& figure img{
-		box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
-		// margin-top: 100px;
-		transition: all 200ms ease-in-out;
-	}
+	// & figure img{
+	// 	transition: all 1s;
+	// 	// margin-top: 100px;
+	// 	// transition: all 200ms ease-in-out;
+	// }
 	
 	& figure {
-		transition: all 200ms;
+		box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
+		overflow: hidden;
+		// transition: all 200ms;
+		img{
+			transition: all .5s;
+			// margin-top: 100px;
+			// transition: all 200ms ease-in-out;
+		}
 	}
 
-	&:hover figure {
-		transition: all 100ms;
-		transform: scale(1.03);
-	}
+	// &:hover figure {
+	// 	// transition: all 100ms;
+	// 	transition: all 2s;
+	// 	// transform: scale(1.03);
+	// 	// filter: blur(3px);
+	// 	img {
+	// 		// transition: all 100ms;
+	// 		transition: all 1.5s;
+	// 		transform: scale(1.1);
+	// 		// transform: scale(1.1) rotateZ(10deg);
+	// 		// filter: blur(3px);
+	// 		// filter: brightness(123%) contrast(167%);;
+	// 		filter: brightness(107%) contrast(107%);
+			
+	// 	}
+	// }
 
 	&:hover {
-		transition: all 200ms;
+		// transition: all 200ms;
 		// transition: transform 200ms;
 		// transition: box-shadow 20000ms;
 		// transform: translateY(-10px);
 		// transform: translateY(-5px);
 		// transform: scale(1.05);
+		div, p{
+			transition: color 200ms;
+			color: var(--hover-color);
+		}
+
+		figure{
+			transition: all .2s;
+
+			// box-shadow: 0px 5px 9px 0px rgba(0,0,0,0.95);
+			box-shadow: 0px 5px 11px 0px rgba(0,0,0,0.95);
+			img {
+				// transition: all 100ms;
+				// transition: all .5s;
+				transition: all .23s ease;
+				// transform: scale(1.1);
+				transform: scale(1.23);
+				// transform: scale(1.1) rotateZ(10deg);
+				// filter: blur(3px);
+				// filter: brightness(123%) contrast(167%);;
+				// filter: brightness(107%) contrast(107%);
+				// filter: brightness(107%) contrast(107%) grayscale(100%) ;
+				// filter: brightness(107%) contrast(107%) saturate(150%) ;
+				// filter: brightness(107%) contrast(107%) saturate(120%) ;
+				filter: brightness(107%) contrast(107%) saturate(113%) ;
+				
+			}
+		}
 
 	}
 
+}
 
-	&:hover img, &:hover img:hover{
-		// color:pink;
-		// transform: translateY(-10px);
-
-		box-shadow: 0px 5px 9px 0px rgba(0,0,0,0.75);
-		transition: box-shadow 100ms ease-in-out; // Slow box-shadow transition
+.dark .card figure{
+	transition-duration: .7s;
+}
+.dark .card:hover{
+	div h2{
+		transition-duration: .1s;
+		@extend .bloom-text;
 	}
-
+	figure{
+		transition-duration: .1s;
+		@extend .bloom-box-shadow;
+	}
 }
 
 
@@ -1713,6 +1766,38 @@ nav.categories ul li a{
 	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
+		transition-duration: 40ms;
+	}
+}
+
+// DELETE NOT USED
+.featured-article-tag{
+	// position: relative;
+	border-radius: 999999px;
+	// padding-left: 10px;
+	// padding-right: 10px;
+	// margin-top: 5px;
+	// text-wrap: nowrap;
+
+	display: inline-block; /* Ensures proper spacing */
+
+	border: 2px solid var(--border);
+
+	-webkit-box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+	box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+
+	transition: all 500ms;
+
+
+	&:hover {
+		color: var(--hover-color);
+		// border: 2px solid var(--hover-color);
+		// cursor: pointer;
+		// -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+		// -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+		// box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 
 		transition-duration: 40ms;
 	}
